feat: Inclusao de arquivos basicos para estrutura da api.

--- a/FlashLog.LogisticsService.Application/FlashLog.LogisticsService.Application.csproj
+++ b/FlashLog.LogisticsService.Application/FlashLog.LogisticsService.Application.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FlashLog.LogisticsService.Shared\FlashLog.LogisticsService.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
