--- a/FlashLog.LogisticsService.Api/FlashLog.LogisticsService.Api.csproj
+++ b/FlashLog.LogisticsService.Api/FlashLog.LogisticsService.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="2.8.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FlashLog.LogisticsService.Application\FlashLog.LogisticsService.Application.csproj" />
+    <ProjectReference Include="..\FlashLog.LogisticsService.Domain\FlashLog.LogisticsService.Domain.csproj" />
+    <ProjectReference Include="..\FlashLog.LogisticsService.Infrastructure\FlashLog.LogisticsService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
